name:                hgame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hgame#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hgame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2, text, containers, time
